sorta fix for reader layout issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,26 +1,6 @@
-.article {
-	border-bottom: dotted 1px;
-	padding-top: 0px;
-}
+/* This all applies to the reader template */
 
-.feed_title {
-	display: inline-block;
-	font-size: small;
-}
-
-.article_title {
-	display: inline-block;
-	font-size: small;
-	padding-left: 20px;
-}
-
-.published_date {
-	display: inline-block;
-	font-size: small;
-	text-align: right;
-	margin-bottom: 0px;
-	float: right;
-}
+/* Star icon: */
 
 .icon-star-empty {
 	font-size: .75em;
@@ -34,4 +14,46 @@
 #not_starred_article {
 	color: black;
 	text-decoration: none;
+}
+
+/* article information. inspiration is the gmail layout */
+
+.reader {
+	/*border: dotted 1px;*/
+	max-width: 100%;
+	overflow: hidden;
+}
+
+.article {
+	border-bottom: dotted 1px;
+	padding-top: 0px;
+	max-width: 100%
+	overflow: hidden;
+}
+
+.feed_title {
+	font-size: small;
+	display: inline-block;
+}
+
+.article_title_div {
+	display: inline-block;
+	/*border: solid 1px;*/
+	font-size: small;
+	padding-left: 20px;
+	position: absolute;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+.published_date {
+	font-size: small;
+	display: inline-block;
+	padding-left: 5px;
+	text-align: right;
+	float: right;
+	position: relative;
+	background-color: #fff;
+	/*border: solid 1px;*/
 }
